responsive design changes

--- a/main.css
+++ b/main.css
@@ -184,6 +184,19 @@ padding-bottom: 5px;
 /*responsive design for medium screens */
 @media all and (max-width: 320px) {
 
+  body {
+    flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+
+  h1 {
+    font-size: 20px;
+    text-align: center;
+    width: 75%;
+    margin-left: 120px;
+  }
+
   .quizContainer {
   width: 75%;
   height: 75%;
