--- a/main.css
+++ b/main.css
@@ -190,6 +190,12 @@ padding-bottom: 5px;
   align-items: center;
   }
 
+  .header {
+    flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  }
+
   h1 {
     font-size: 20px;
     text-align: center;
@@ -200,6 +206,8 @@ padding-bottom: 5px;
   .quizContainer {
   width: 75%;
   height: 75%;
+  justify-content: center;
+  align-items: center;
   }
 
   p {
