--- a/main.css
+++ b/main.css
@@ -190,15 +190,9 @@ padding-bottom: 5px;
   align-items: center;
   }
 
-  #titleText {
+  header {
  visibility: hidden;
-  }
-
-  h1 {
-    font-size: 20px;
-    text-align: center;
-    width: 50%;
-    margin-left: 100px;
+ display: none;
   }
 
   .quizContainer {
@@ -209,7 +203,7 @@ padding-bottom: 5px;
   }
 
   p {
-    font-size: 12px;
+    font-size: 75%;
     text-align: center;
   }
 
@@ -218,10 +212,12 @@ padding-bottom: 5px;
   }
 
   .question {
-    font-size: 12px;
+    font-size: 10px;
   }
   
   .option {
-  width: 200px;
+  width: 75%;
   }
+
+
 }
