--- a/main.css
+++ b/main.css
@@ -216,8 +216,15 @@ padding-bottom: 5px;
   }
   
   .option {
-  width: 75%;
-  }
+    width: 200px;
+    display: inline-block;
+    padding: 5px 0 5px 10px;
+    vertical-align: left;
+    margin: 5px 0 5px 5px;
+    color: #000000;
+    border-radius: 20px;
+    }
+
 
 
 }
