--- a/main.css
+++ b/main.css
@@ -198,7 +198,7 @@ padding-bottom: 5px;
   .quizContainer {
   width: 75%;
   height: 75%;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   }
 
@@ -213,6 +213,10 @@ padding-bottom: 5px;
 
   .question {
     font-size: 10px;
+    padding: 0;
+    border-radius: 10px;
+    margin: 5px 0 5px;
+    color:#000000;
   }
   
   .option {
@@ -225,6 +229,10 @@ padding-bottom: 5px;
     border-radius: 20px;
     }
 
-
+    #questionCount p {
+      font-size: 12px;
+      font-family: 'Lato', sans-serif;
+      font-style: italic;
+    }
 
 }
