--- a/main.css
+++ b/main.css
@@ -203,7 +203,7 @@ padding-bottom: 5px;
   }
 
   p {
-    font-size: 75%;
+    font-size: 10px;
     text-align: center;
   }
 
@@ -220,13 +220,14 @@ padding-bottom: 5px;
   }
   
   .option {
-    width: 200px;
+    width: 100px;
     display: inline-block;
     padding: 5px 0 5px 10px;
     vertical-align: left;
     margin: 5px 0 5px 5px;
     color: #000000;
     border-radius: 20px;
+    font-size: 12px;
     }
 
     #questionCount p {
