--- a/main.css
+++ b/main.css
@@ -196,8 +196,8 @@ padding-bottom: 5px;
   }
 
   .quizContainer {
-  width: 75%;
-  height: 75%;
+  width: 300px;
+  height: 500px;
   justify-content: left;
   align-items: center;
   }
