--- a/main.css
+++ b/main.css
@@ -203,7 +203,7 @@ padding-bottom: 5px;
   }
 
   p {
-    font-size: 25px;
+    font-size: 40px;
     text-align: center;
   }
 
@@ -212,8 +212,8 @@ padding-bottom: 5px;
   }
 
   .question {
+    padding: 10px;
     font-size: 25px;
-    padding: 0;
     border-radius: 10px;
     margin: 5px 0 5px;
     color:#000000;
