--- a/main.css
+++ b/main.css
@@ -212,6 +212,7 @@ padding-bottom: 5px;
   }
 
   .question {
+    width: 200px;
     padding: 10px;
     font-size: 25px;
     border-radius: 10px;
